--- a/src/pages/gallery/index/index.scss
+++ b/src/pages/gallery/index/index.scss
@@ -4,6 +4,7 @@
 .component-img-list {
     font-size: 0;
     padding: 1rem;
+    font-weight: 300;
     .component-img-item {
         padding: 1rem;
         display: inline-block;
@@ -26,39 +27,60 @@
 
 /*图片预览*/
 .photo {
-    position: relative;
-    overflow-y: scroll;
-    padding-bottom: 1rem;
+    margin: 2rem 3rem;
+    font-weight: 300;
+    .header {
+        margin-bottom: 2rem;
+        .detail {
+            display: flex;
+            justify-content: space-between;
+            a {
+                color: #adafc5;
+            }
+            span {
+                color: #adafc5;
+                margin-right: 1rem;
+                font-size: .85rem;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+        .title {
+            font-size: 1.9rem;
+            margin-bottom: 2rem;
+            color: #3e4077;
+        }
+    }
     .body {
+        padding: 2rem;
+        @extend .section;
+        margin-bottom: 3rem;
         img {
             max-width: 100%;
         }
     }
-    .header {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-        background-color: #fdfdfd;
-        padding: 1rem;
-        box-shadow: 0 10px 15px #ddd;
-        
-        .title {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            margin-bottom: .5rem;
-        }
-        .detail {
-            line-height: 1.5;
-            color: $fontGray;
-            font-size: .8rem;
-            p {
-                margin-bottom: .5rem;
-            }
-            span {
-                margin-right: .5rem;
-            }
-            a {
-                color: $fontGray;
+    .extra {
+        display: flex;
+        justify-content: space-between;
+        padding: 2rem 0rem 0rem;
+        .extra-ul {
+            display: flex;
+            font-size: .85rem;
+            color: #adafc5;
+            cursor: pointer;
+            li {
+                margin-right: 2rem;
+                @extend .transition;
+                &:hover {
+                    color: $purple;
+                }
+                svg {
+                    margin-right: .1rem;
+                }
+                &:last-child {
+                    margin-right: 0;
+                }
             }
         }
     }
