--- a/src/pages/setting/basic/index.scss
+++ b/src/pages/setting/basic/index.scss
@@ -1,75 +1,3 @@
-.settings-detail {
-    overflow-y: scroll;
-    padding: 3rem;
-    .input-group {
-       margin-bottom: 2rem;
-       .input-label {
-           display: block;
-           width: 100%;
-           margin-bottom: .5rem;
-       }
-       .input-area {
-           resize: none;
-           width: 30rem;
-           display: block;
-           padding: .6rem .8rem;
-           outline: none;
-           border-radius: .2rem;
-           border: 1px solid #ddd;
-           font-size: .9rem;
-           margin-bottom: .5rem;
-       }
-       .input-text {
-           width: 20rem;
-           display: block;
-           padding: .6rem .8rem;
-           outline: none;
-           border-radius: .2rem;
-           border: 1px solid #ddd;
-           font-size: .9rem;
-           margin-bottom: .5rem;
-
-       }
-       .input-mark {
-           font-size: .8rem;
-           color: #999;
-       }
-       .input-file-box {
-           position: relative;
-           .file-input {
-               width: 1rem;
-               height: 1rem;
-               visibility: hidden;
-               position: absolute;
-               z-index: -1;
-
-           }
-           .file-btn {
-               background-color: #4d7cff;
-               color: #fff;
-               border: none;
-               padding: .5rem 1rem;
-           }
-       }
-       .input-btn {
-            background-color: #4d7cff;
-            color: #fff;
-            border: none;
-            padding: .5rem 1rem;
-            cursor: pointer;         
-       }
-
-    }
-}       
-.two-side {
-    display: flex;
-    .input-img {
-        width: 6rem;
-        height: 6rem;
-        margin-right: 2rem;
-    }
-}
-
 .input-static-group {
     margin-bottom: 2rem;
     .input-label {
@@ -77,19 +5,11 @@
         margin-bottom: .5rem;
     }
     .input-static {
-        color: #999;
+        color: #8493b8;
         display: flex;
         justify-content: space-between;
         .input-pure-text {
             margin-bottom: .5rem;
         }
     }
-}
-
-.input-btn {
-    background-color: #4d7cff;
-    color: #fff;
-    border: none;
-    padding: .5rem 1rem;
-    cursor: pointer;         
 }
