--- a/src/pages/setting/index/index.scss
+++ b/src/pages/setting/index/index.scss
@@ -1,88 +1,41 @@
-.settings-detail {
-    overflow-y: scroll;
-    padding: 3rem;
-    .input-group {
-       margin-bottom: 2rem;
-       .input-label {
-           display: block;
-           width: 100%;
-           margin-bottom: .5rem;
-       }
-       .input-area {
-           resize: none;
-           width: 30rem;
-           display: block;
-           padding: .6rem .8rem;
-           outline: none;
-           border-radius: .2rem;
-           border: 1px solid #ddd;
-           font-size: .9rem;
-           margin-bottom: .5rem;
-       }
-       .input-text {
-           width: 20rem;
-           display: block;
-           padding: .6rem .8rem;
-           outline: none;
-           border-radius: .2rem;
-           border: 1px solid #ddd;
-           font-size: .9rem;
-           margin-bottom: .5rem;
+@import '../../../assets/styles/public.scss';
 
-       }
-       .input-mark {
-           font-size: .8rem;
-           color: #999;
-       }
-       .input-file-box {
-           position: relative;
-           .file-input {
-               width: 1rem;
-               height: 1rem;
-               visibility: hidden;
-               position: absolute;
-               z-index: -1;
-
-           }
-           .file-btn {
-               background-color: #4d7cff;
-               color: #fff;
-               border: none;
-               padding: .5rem 1rem;
-           }
-       }
-       .input-btn {
-            background-color: #4d7cff;
-            color: #fff;
-            border: none;
-            padding: .5rem 1rem;
-            cursor: pointer;         
-       }
-
+/*操作列表*/
+.setting-menu {
+    @extend .section;
+    .section-title {
+        color: #a3a5b6;
+        font-size: .9rem;
     }
-}       
-.two-side {
-    display: flex;
-    .input-img {
-        width: 6rem;
-        height: 6rem;
-        margin-right: 2rem;
+    margin: 3rem 2rem;
+    padding: 2rem;
+    .list-menu {
+        > li {
+            > a {
+                @extend .transition;
+                display: block;
+                box-sizing: border-box;
+                padding: 2rem 0 0rem;
+                text-decoration: none;
+                color: #9396b2;
+                font-size: .9rem;
+                border-radius: .5rem;
+                &:hover {
+                    color: $purple;
+                    svg {
+                        color: $purple;
+                    }
+                }
+                svg {
+                    color: $normalGray;
+                    margin-right: .5rem;
+                }
+            }
+        }
     }
 }
 
-.input-static-group {
-    margin-bottom: 2rem;
-    .input-label {
-        display: block;
-        margin-bottom: .5rem;
-    }
-    .input-static {
-        color: #999;
-        display: flex;
-        justify-content: space-between;
-        .input-pure-text {
-            margin-bottom: .5rem;
-            font-size: .9rem;
-        }
-    }
+.set-panel {
+    margin: 3rem 3rem 0 0;
+    @extend .section;
 }
