add edit and components

--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -158,8 +158,8 @@
 
 /*最新动态*/
 .news {
-    margin-top: 3rem;
-    padding: 2rem;
+    margin: 3rem 0;
+    padding: 2rem 2rem 0;
     font-weight: 300;
     @extend .section;
     .section-title {
