扩展编辑工具，消息板块

--- a/src/pages/setting/account/index.scss
+++ b/src/pages/setting/account/index.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/public.scss';
 .settings-detail {
-    padding: 3rem;
+    padding: 3rem 3rem 0;
     .input-group {
        margin-bottom: 2rem;
        .input-label {
