--- a/src/pages/group/index/index.scss
+++ b/src/pages/group/index/index.scss
@@ -176,7 +176,7 @@
         li {
             a {
                 display: block;
-                padding: 1.5rem 0 0;
+                padding: 1rem 0 0;
                 color: #999;
                 font-size: .9rem;
                 @extend .transition;
@@ -219,6 +219,14 @@
         font-size: .85rem;
         line-height: 1.8;
         margin-bottom: 1rem;
+        > a {
+            margin: 0 .5rem;
+            color: #646464;
+            svg {
+                color: #999;
+                margin-right: .2rem;
+            }
+        }
     }
 }
 
@@ -233,6 +241,7 @@
         }
         .btn-add {
             display: block;
+            cursor: pointer;
             width: 1.8rem;
             height: 1.8rem;
             border-radius: 50%;
