富文本功能，制图界面

--- a/src/assets/styles/normal.scss
+++ b/src/assets/styles/normal.scss
@@ -54,3 +54,11 @@ textarea {
     padding: .5rem 2rem;
     cursor: pointer;         
 }
+
+.sub-btn {
+    background-color: #E9E9E6;
+    color: #666;
+    border: none;
+    padding: .5rem 2rem;
+    cursor: pointer;         
+}
