--- a/src/pages/group/index/index.scss
+++ b/src/pages/group/index/index.scss
@@ -17,7 +17,7 @@
         margin-bottom: 1rem;
         box-sizing: border-box;
         width: 100%;
-        box-shadow: 0 10px 15px #eeeef8;
+        box-shadow: 0 10px 15px #e9e9f4;
     }
 }
 
@@ -31,7 +31,7 @@
         > img {
             width: 3.5rem;
             border-radius: 50%;
-            box-shadow: 0 10px 15px #eeeef8;
+            box-shadow: 0 10px 15px #e9e9f4;
         }
     }
     .info-us {
@@ -57,7 +57,7 @@
 .us-list {
     .header {
         padding: 1rem 2rem;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px solid #e9e9f4;
         color: #646464;
         text-align: center;
     }
@@ -107,7 +107,7 @@
             > img {
                 width: 3rem;
                 border-radius: 50%;
-                box-shadow: 0 10px 15px #eeeef8;
+                box-shadow: 0 10px 15px #e9e9f4;
             }
         }
         .info-news {
@@ -136,7 +136,7 @@
 
 .msg-send {
     width: 100%;
-    border-top: 1px solid #eee;
+    border-top: 1px solid #e9e9f4;
     box-sizing: border-box;
     .msg-input {
         color: #777;
@@ -151,7 +151,7 @@
     }
     .msg-ul {
         display: flex;
-        border-top: 1px solid #eee;
+        border-top: 1px solid #e9e9f4;
         padding: 1.2rem 2rem;
         li {
             margin-right: 1rem;
@@ -166,7 +166,7 @@
 
 
 .us-btns {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #e9e9f4;
     margin: 0 3rem 2rem;
     padding: 2rem;
     @extend .section;
@@ -207,7 +207,7 @@
             width: 6rem;
             height: 6rem;
             border-radius: 50%;
-            box-shadow: 0 10px 15px #eeeef8;
+            box-shadow: 0 10px 15px #e9e9f4;
         }
     }
     .title {
@@ -251,4 +251,32 @@
             line-height: 1.8rem;
         }
     }
+}
+
+.add-mem {
+    padding: 2rem;
+    .input {
+        display: block;
+        border: 1px solid #e9e9f4;
+        padding: .6rem;
+        width: 18rem;
+    }
+    .ul-add-mem {
+        border-right: 1px solid #e9e9f4;
+        border-left: 1px solid #e9e9f4;
+        li {
+            display: flex;
+            align-items: center;
+            width: 18rem;
+            border-bottom:  1px solid #e9e9f4;
+            padding: .4rem;
+            font-size: .9rem;
+            img {
+                width: 2rem;
+                height: 2rem;
+                border-radius: 50%;
+                margin-right: 1rem;
+            }
+        }
+    }    
 }
