绘图工具编写，组件扩展

--- a/src/layouts/options/index.scss
+++ b/src/layouts/options/index.scss
@@ -2,7 +2,7 @@
 .public-options {
     display: flex;
     align-items: center;
-    a {
+    span {
         transition: all .2s;
         text-align: center;
         display: block;
