--- a/src/components/modal/index.scss
+++ b/src/components/modal/index.scss
@@ -3,7 +3,7 @@ $dotColor: #ff6a6a;
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(245,245,252, .8);
     z-index: 300;
     display: flex;
     justify-content: center;
