--- a/src/layouts/header/header.scss
+++ b/src/layouts/header/header.scss
@@ -27,3 +27,22 @@ $iconColor: #9190b4;
         font-size: .9rem;
     }
 }
+
+.public-options {
+    display: flex;
+    align-items: center;
+    span {
+        transition: all .2s;
+        text-align: center;
+        display: block;
+        width: 4rem;
+        height: 4rem;
+        line-height: 4rem;
+        color: #9396b2;
+        &.active,
+        &:hover {
+            color: #632df8;
+            background-color: #fff;
+        }
+    }
+}
