--- a/src/pages/group/index/index.scss
+++ b/src/pages/group/index/index.scss
@@ -165,24 +165,37 @@
 }
 
 
-.us-btns {
+.us-task {
     border-bottom: 1px solid #e9e9f4;
-    margin: 0 3rem 2rem;
-    padding: 2rem;
+    margin: 2rem 3rem 2rem;
+    padding: 1rem .5rem 1rem 2rem;
+    .section-overflow {
+        height: 20rem;
+        overflow-y: scroll;
+    }
     @extend .section;
-    .ul-us-btns {
-        padding: .5rem 0;
+    .title {
+        font-size: .7rem;
+        margin-top: 1rem;
+    }
+    .today {
+        font-size: .9rem;
+        font-weight: 400;
+    }
+    .ul-us-task {
+        padding: 0rem 1.5rem 0rem 0;
         box-sizing: border-box;
+
         li {
-            a {
-                display: block;
-                padding: 1rem 0 0;
-                color: #999;
-                font-size: .9rem;
-                @extend .transition;
-                &:hover {
-                    color: $purple;
-                }
+            display: block;
+            padding: .8rem 0 0;
+            color: #999;
+            font-size: .9rem;
+            cursor: pointer;
+            line-height: 1.5;
+            @extend .transition;
+            &:hover {
+                color: $purple;
             }
             svg {
                 margin-right: 1rem;
@@ -197,9 +210,12 @@
     padding: 2rem 0;
     flex-grow: 0;
     flex-shrink: 0;
+    height: 100vh;
 }
 
 .us-about {
+    flex-shrink: 0;
+    flex-grow: 0;
     text-align: center;
     .cover {
         margin-bottom: 1rem;
@@ -218,13 +234,13 @@
         color: #8493b8;
         font-size: .85rem;
         line-height: 1.8;
-        margin-bottom: 1rem;
+        > span,
         > a {
-            margin: 0 .5rem;
+            margin: 0 .6rem;
             color: #646464;
             svg {
                 color: #999;
-                margin-right: .2rem;
+                margin-right: .3rem;
             }
         }
     }
@@ -254,16 +270,20 @@
 }
 
 .add-mem {
-    padding: 2rem;
+    padding: 1rem 2rem;
     .input {
         display: block;
         border: 1px solid #e9e9f4;
         padding: .6rem;
         width: 18rem;
     }
+    .btns {
+        text-align: center;
+    }
     .ul-add-mem {
         border-right: 1px solid #e9e9f4;
         border-left: 1px solid #e9e9f4;
+        margin-bottom: 1rem;
         li {
             display: flex;
             align-items: center;
